--- a/nginx/nginx/nginx.conf
+++ b/nginx/nginx/nginx.conf
@@ -1,9 +1,11 @@
 
 user  nginx;
 worker_processes  auto;
+rtmp_auto_push on;
 
 error_log  /var/log/nginx/error.log notice;
 pid        /var/run/nginx.pid;
+
 
 
 events {
@@ -29,4 +31,16 @@ http {
     #gzip  on;
 
     include /etc/nginx/conf.d/*.conf;
+}
+
+rtmp {
+    server {
+        listen 1935;
+        listen [::]:1935 ipv6only=on;    
+
+        application live {
+            live on;
+            record off;
+        }
+    }
 }
