--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -25,7 +25,10 @@ services:
       # - ./nginx:/etc/nginx
 
   nginx-rtmp:
-    image: nginx
+    # image: nginx
+    build:
+      context: ./
+      dockerfile: ./images/nginx/Dockerfile
     ports:
       - 1935:1935
       - 8080:80
@@ -35,5 +38,5 @@ services:
       - RTMP_PORT=1935
     volumes:
       - ./certs:/opt/certs
-      # - ./nginx:/etc/nginx
+      - ./nginx:/etc/nginx
 
